--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-729.6KB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇸🇬 新加坡-1.76MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-3.05MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-336.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇬🇧 英国-1.16MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-203.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-1008.9KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇬🇧 英国-1.45MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 阿联酋-2.13MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇬🇧 英国-1.45MB/s(Youtube:不良林)
-      - 阿联酋-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
