--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-203.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇻🇳 越南-5.38MB/s(Youtube:不良林), server: 103.173.255.228, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-203.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-912.2KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1008.9KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3, server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: free-node-ar-1.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: free-node-ar-1.texo.network, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-912.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1008.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 3
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
